# client-wasm-lib

intmax-zkp-core/: Cargo.toml
intmax-zkp-core/data/: simple_signature_input.json  user_transaction_input.json
intmax-zkp-core/src/rollup/circuits/merge_and_purge/: mod.rs
plonky2/plonky2/: Cargo.toml
plonky2/plonky2/src/util/: serialization.rs
react-web/: package-lock.json  package.json
react-web/public/data/: simple_signature_input.json  user_transaction_input.json
react-web/src/: App.css  App.tsx  setupProxy.ts  wasm-worker.ts
wasm-client/: .Cargo.toml.swp  Cargo.toml  main.js  output
wasm-client/src/: lib.rs
