[package]
name = "intmax-zkp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
num = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2"
plonky2 = { path="../plonky2/plonky2", default-features = false, features = ["parallel"]}
plonky2_ecdsa = { path="../plonky2/ecdsa"}
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0"

[lib]
