[package]
name = "wasm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
intmax-zkp-core = {path="../intmax-zkp-core"}
plonky2 = { path="../plonky2/plonky2", default-features = false, features = []}
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[profile.bench]
opt-level = 3
